# xdna-engine

./: .githooks-install.md  .gitignore  .gitmodules  ARCHITECTURE.md  BUILD-AND-BENCH.md  LICENSE  NOTICE  README.md  install.sh
artifacts/goldens/: manifest.tsv
artifacts/wer_clips/: SOURCE.md  int8_eval_results.json  parakeet_eval_results.json  refs.json  whisper_npu_wer_npu.json  whisper_npu_wer_onnx.json  whisper_small_oracle.json
bench/: RESULTS.md  backends.py  bench.py  compare.py  corpus.toml  energy.py  sysmetrics.py  test_backends.py  test_energy.py  test_sysmetrics.py
bench/results/: whisper-small-vs-flm-turbo.json  whisper-small-vs-flm-turbo.md
docs/: README.md  aie2p-brick-catalog.md  benchmark-methodology.md  case-study-on-npu-logits.md  data-movement-thesis.md  execution-graph.md  where-time-goes.md
hooks/: pre-push
npu_asr/: __init__.py  block.py  config.py  device.py  dtypes.py  encoder.py  fused.py  ops.py  verify.py  weights.py
overnight/: DEPLOY.md
patches/: amd-IRON-deepc.patch  iron-gemv-gelu-epilogue.patch  iron-gemv-int8.patch  iron-mha-noncausal.patch  iron-mv-int8-bf16.patch
profiles/: xdna2.toml
route_b_kernels/: README.md
route_b_kernels/aie_kernels/: acc_add.cc  affine_cast.cc  cast_f32_bf16.cc  conf_epi_silu_design.py  conformer_epilogues.cc  glu.cc  ln_2pass.cc  ln_cheap_prologue.cc  mm_ln_epilogue.cc  mm_silu_epilogue.cc  norm_gemv_prologue.cc  residual_add.cc  test_conformer_epilogues_golden.py  transpose_tile.cc
route_b_kernels/cascade_ffn/: STRUCTURE.md  build_cascade_ffn.sh  diag_dump.py  failed-noborardcast-reentrancy-attempt.patch  ffn_cascade.py  gen_golden.py  mv_bf16_gelu.cc  test_cascade_ffn.cpp  test_redispatch_elf.py
route_b_kernels/conveyor_proto/: Makefile  README.md  conveyor_attn.cc  conveyor_attn_iron.py  run_bd_onchip.py
route_b_kernels/ctx_ln/: Makefile.accadd  Makefile.affinecast  Makefile.cast  Makefile.ctxln  Makefile.deint  Makefile.glu  Makefile.resadd  Makefile.silu2  acc_add_iron.py  affine_cast_iron.py  cast_f32_bf16_iron.py  ctx_ln_iron.py  deint_cast_iron.py  glu_iron.py  ln_cheap_study.py  ln_cheap_verdict.md  residual_add_iron.py  silu_brick.cc  silu_iron.py
route_b_kernels/decode_fused/: argmax_design.py  argmax_op.py  argmax_slice.cc  gen_cross_attn.py  gen_cross_attn_batched.py  gen_decode.py  gen_decode_batched.py  gen_encoder_mha.py  gen_ffn.py  gen_ffn_batched.py  gen_gemm_probe.py  gen_gemma_decode.py  gen_layer.py  gen_ln_qkv.py  gen_ln_qkv_batched.py  gen_projout.py  gen_self_attn.py  gen_self_attn_batched.py  mha_static_design.py  newstack_compat.py  spike_gen_2gemv.py  val_encoder_mha.py  verify_fused_decode.py  verify_fused_decode_sp.py
route_b_kernels/decode_norm_gemv/: norm_gemv_iron.py
route_b_kernels/dwconv1d/: Makefile  Makefile.dwsilu  Makefile.dwsilu_t  Makefile.transpose  (+6 more)
rust/: Cargo.toml
rust/npu-asr/: Cargo.toml
rust/npu-asr-serve/: Cargo.toml  build.rs
rust/npu-asr-serve/src/: main.rs
rust/npu-asr/src/: block.rs  conv_npu.rs  ctx2.rs  ctx_decode.rs  ctx_ln.rs  encoder.rs  engines.rs  kernel_registry.rs  lib.rs  tuning.rs  weights.rs
rust/npu-capi/: Cargo.toml  build.rs  cbindgen.toml
rust/npu-capi/include/: npu_engine.h
rust/npu-capi/src/: lib.rs
rust/npu-capi/tests/: c_smoke.rs
rust/npu-cli/: Cargo.toml
rust/npu-cli/src/: main.rs
rust/npu-engine/: Cargo.toml
rust/npu-engine/src/: api.rs  config.rs  lib.rs  pipeline.rs  registry.rs  tuning_profile.rs
rust/npu-engine/src/asr/: mod.rs  parakeet.rs  whisper.rs  whisper_decoder.rs
rust/npu-engine/src/bert/: encoder.rs  frontend.rs  head.rs  mod.rs  weights.rs
rust/npu-engine/src/esm/: encoder.rs  frontend.rs  mod.rs  native.rs  rope.rs  weights.rs
rust/npu-engine/tests/: declarative_weights.rs  esm_arena_load.rs
rust/npu-gemma/: Cargo.toml
rust/npu-gemma/src/: config.rs  lib.rs  npu.rs  parity.rs  schedule.rs
rust/npu-onnx/: Cargo.toml  build.rs
rust/npu-onnx/shim/: onnx_shim.cpp  onnx_shim.h  onnxruntime_c_api.h
rust/npu-onnx/src/: lib.rs
rust/npu-parakeet/: Cargo.toml
rust/npu-parakeet/src/: config.rs  decoder.rs  encoder.rs  lib.rs  npu.rs  ops.rs  pos.rs  prof.rs  weights.rs
rust/npu-runtime/: Cargo.toml
rust/npu-runtime/src/: actor.rs  config.rs  http.rs  lib.rs  loader.rs  reconcile.rs  registry.rs  select.rs
rust/npu-runtime/tests/: actor.rs
rust/npu-weights/: Cargo.toml
rust/npu-weights/src/: arena.rs  fingerprint.rs  lib.rs  onnx.rs  source.rs  spec.rs
rust/npu-weights/src/arch/: bert.rs  clip.rs  dinov2.rs  esm.rs  fastconformer.rs  gigaam.rs  mod.rs  modernbert.rs  opt.rs  resnet.rs  vit.rs  whisper.rs
rust/npu-weights/tests/: parity_bge.rs  parity_clip.rs  parity_dinov2.rs  parity_esm.rs  parity_gigaam.rs  parity_minilm.rs  parity_modernbert.rs  parity_opt.rs  parity_parakeet.rs  parity_resnet.rs  parity_vit.rs  parity_whisper.rs
rust/npu-whisper/: Cargo.toml
rust/npu-whisper/src/: config.rs  encoder.rs  lib.rs  mha_npu.rs  npu.rs  weights.rs
scenarios/: asr-gigaam.toml  asr-whisper-small.toml  asr.toml  bge-base.toml  esm2-35m-native.toml  esm2-35m.toml  esm2-8m-native.toml  esm2-8m.toml
scripts/: CONVEYOR_INTEGRATION_RUNBOOK.md  _esm_latency.sh  _score_batched_wer.py  _score_m1_wer.py  _whisper_decode_attn_wer_run.sh  _whisper_decode_wer_run.sh  air_env.sh  amd_paths.sh  amd_toolchains.env.example  apply_mlir_aie_patches.sh  apply_patches.sh  asr_oracle.py  asr_service.py  bench_batched_decode.sh  bench_npu_block.py  bge_reference.py  block0_numpy.py  build_batched_decode.sh  build_conv_kernels.sh  build_decode_kernels.sh  build_decode_profile.sh  build_deepc_decode.sh  build_esm_native_kernels.sh  build_gemm_probe.sh  build_k768_gelu_rail.sh  build_kernels.sh  build_lpddr_bw_microbench.sh  build_mha_decode.sh  build_mlir_aie_aiecc.sh  build_parakeet_dma_sweep.sh  build_parakeet_kernels.sh  build_parakeet_modal_kernels.sh  build_parakeet_occupancy_stub.sh  build_peano_fast.sh  build_projout_elf.sh  build_wheelhouse.sh  bump_upstream.sh  cache_env.sh  check_no_private_refs.sh  coalesce_e2e_ab.sh  (+138 more)
tests/: test_gemma_ffn_golden.py
(+95 files in other folders)
