[package]
name = "npu-asr-serve"
version = "0.1.0"
edition = "2021"
description = "Single-binary GigaAM-v3 ASR HTTP service (NPU encoder + onnxruntime preproc/decode)"

[[bin]]
name = "asr_serve"
path = "src/main.rs"

[dependencies]
npu-asr = { path = "../npu-asr" }
npu-xrt = { path = "../npu-xrt" }
npu-onnx = { path = "../npu-onnx" }
ndarray = "0.16"
