[package]
name = "npu-engine"
version = "0.1.0"
edition = "2021"
description = "General multi-model engine over the XDNA2 NPU kernel kit (ASR + embeddings via a Frontend/Encoder/Head pipeline)"

[lib]
name = "npu_engine"
path = "src/lib.rs"

[features]
# `npu` is accepted on the build line for parity with the other crates; the engine always links the
# NPU encoders (parakeet/whisper are pinned with their own `npu` feature), so this is a no-op marker.
npu = []

[dependencies]
ndarray = "0.16"
ndarray-npy = { version = "0.9", default-features = false }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
npu-xrt = { path = "../npu-xrt" }
npu-asr = { path = "../npu-asr", features = ["two_ctx"] }
npu-asr-host = { path = "../npu-asr-host" }
npu-onnx = { path = "../npu-onnx" }
npu-parakeet = { path = "../npu-parakeet", features = ["npu"] }
npu-whisper = { path = "../npu-whisper", features = ["npu"] }

[[bin]]
name = "verify_embeddings"
path = "src/bin/verify_embeddings.rs"

[[bin]]
name = "verify_esm"
path = "src/bin/verify_esm.rs"

[[bin]]
name = "verify_native_gemm"
path = "src/bin/verify_native_gemm.rs"

[[bin]]
name = "engine_serve"
path = "src/bin/engine_serve.rs"

[[bin]]
name = "probe_tuning"
path = "src/bin/probe_tuning.rs"

[[bin]]
name = "verify_whisper_decode"
path = "src/bin/verify_whisper_decode.rs"

[[bin]]
name = "whisper_e2e_timing"
path = "src/bin/whisper_e2e_timing.rs"
