[package]
name = "npu-runtime"
version = "0.1.0"
edition = "2021"
description = "Control plane over npu-engine: desired-state config, reconcile, single device actor"

[features]
testkit = []

[dependencies]
npu-engine = { path = "../npu-engine" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
